Fix container log settings alignment
Form width needs to be expanded to 100% in order to allow wider fields.
Maxiumfield width is 25%

Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/19142
Upgrade-Verified: jenkins <jenkins@vmware.com>
Closures-Verified: jenkins <jenkins@vmware.com>
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/components/_container-details.scss
+++ b/ui/app/src/styles/components/_container-details.scss
@@ -193,6 +193,7 @@ $elements-side-margin: $elements-margin / 2;
     position: absolute;
     bottom: 0;
     left: 0;
+    width: 100%;
 
     div.radio-inline, div.select {
       min-width: 60px;
